핵사고날 아키텍쳐의 구조에 대해 학습함